# MaterialAI-Workbench

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LEARNING_PLAN_CN.md  MANIFEST.in  NOTICE.md  PROJECT_RELEASE_PLAN_CN.md  PYLABFEA_APP_ROADMAP_CN.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_streamlit.ps1
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
configs/: default.yaml  local.example.yaml
docs/: ABAQUS_CLOSED_LOOP_V03_CN.md  ABAQUS_MCP_WORKBENCH_CN.md  CAPABILITY_BOUNDARIES_CN.md  CASE_LIBRARY_USER_GUIDE_CN.md  DESKTOP_CLIENT_CN.md  DEVELOPMENT_CN.md  MINIMUM_CLOSED_LOOP_CASE_CN.md  NATURAL_LANGUAGE_SERVICE_CN.md  PRODUCT_COMPOSITE_ML_WORKBENCH_CN.md  PRODUCT_ROADMAP_AND_LEARNING_GUIDE_CN.md  PRODUCT_VISION_CASE_LIBRARY_CN.md  PYLABFEA_NOTEBOOK_STUDY_GUIDE_CN.md  TECHNICAL_ARCHITECTURE_CN.md  V04_CASE_INTELLIGENCE_CN.md  index.md
docs/00_project_status/: COMPOSITE_RESEARCH_MAP_CN.md  DAILY_STATUS_20260706_CN.md  MILESTONE_REVIEW_CN.md  NEXT_PRODUCTION_TASKS_CN.md  RELEASE_V0.1.0_CN.md  RELEASE_V0.1.1_CN.md  WORKSPACE_AUDIT_AUTOGEN_CN.md  WORKSPACE_CLEANLINESS_REPORT_CN.md
docs/api/: API_INVENTORY_AUTOGEN_CN.md  API_INVENTORY_CN.md  CASE_INTELLIGENCE_API_CN.md  EXPERIMENTAL_BASELINE_API_CN.md  EXPERIMENTAL_DATASET_API_CN.md  EXPERIMENTAL_VALIDATION_API_CN.md  MATERIALAI_API_USAGE_CN.md  PYLABFEA_MATERIALAI_BRIDGE_CN.md  README_CN.md
docs/learning/: BARLAT_YLD2000_TO_YLD2004_CN.md  CFRP_EXPERIMENTAL_DATASET_CN.md  CFRP_GROUPED_BASELINES_CN.md  CFRP_VALIDATION_AUDIT_CN.md  COMPOSITE_ML_VALIDATION_CN.md  COMPOSITE_SURROGATE_MASTERY_CN.md  PYLABFEA_NOTEBOOK_SOURCE_WALKTHROUGH_CN.md  PYLABFEA_TO_FE_DEEP_LEARNING_TUTORIAL_CN.md  README_CN.md
docs/release/: GITHUB_PRODUCT_RELEASE_GUIDE_CN.md  GITHUB_RELEASE_CHECKLIST_CN.md  RELEASE_REORG_PLAN_CN.md
docs/testing/: FUNCTIONAL_TEST_CHECKLIST_CN.md  QA_PROJECT_HANDOFF_CN.md
examples/: OPTIONAL_DATASETS.md
material_ai_workbench/: README_CN.md  __init__.py  abaqus_batch_client.py  abaqus_bridge.py  abaqus_diagnostics.py  abaqus_mcp_client.py  batch_simulation.py  case_based_workflow.py  case_cli.py  case_intelligence.py  case_library.py  case_package.py  closed_loop_report.py  composite_benchmarks.py  composite_dataset.py  composite_workflow.py  config.py  data_import.py  dataset_export.py  desktop_launcher.py  engineering_report.py  experimental_baselines.py  experimental_datasets.py  experimental_validation.py  job_queue.py  llm_adapter.py  logging_config.py  material_library.py  multi_fidelity.py  nl_tasks.py  odb_postprocess.py  param_recommender.py  pipeline.py  plate_hole_acceptance.py  plate_hole_batch.py  requirements.txt  run_composite_batch.py  run_composite_closed_loop.py  run_composite_workflow.py  run_experimental_baselines.py  (+11 more)
material_ai_workbench/docs/: 20260704_PRODUCT_UPDATE_CN.md  ABAQUS_MCP_WORKBENCH_CN.md  CASE_LIBRARY_USER_GUIDE_CN.md  LLM_API_SETUP_CN.md  __init__.py
material_ai_workbench/resources/: __init__.py  composite_benchmarks.json
material_ai_workbench/resources/umat/: __init__.py
material_ai_workbench/specs/: 10_TASKS_FOR_CODEX.md  BUGFIX_AND_UI_POLISH.md  CODEX_AUDIT_AND_NEXT_20260704.md  CODEX_ROUND2_TASKS.md  CODEX_ROUND3_CORE_CLOSED_LOOP.md  DEEPSEEK_FULL_DAY_TASKS_20260706.md  FINAL_STATE_AND_NEXT.md  NEXT_STEPS.md  PHASE_0_ENGINEERING_BASICS.md  PHASE_1_QUALITY_HARDENING.md  PHASE_2_MATERIAL_MODELS.md  PHASE_3_ABAQUS_INTEGRATION.md  PHASE_4_SURROGATE_UPGRADE.md  PHASE_5_LLM_INTEGRATION.md  PHASE_6_PACKAGING.md  README.md  __init__.py
material_ai_workbench/tests/: test_barlat.py  test_material_library.py  test_nl_tasks.py  test_pipeline.py
notebooks/: pyLabFEA_Homogenization.ipynb  pyLabFEA_Introduction.ipynb  pyLabFEA_ML-FlowRule-Hill.ipynb  pyLabFEA_ML-FlowRule-Training.ipynb  pyLabFEA_Plasticity.ipynb
packaging/windows/: MaterialAIWorkbench.spec  README-START.txt  build_portable.ps1  create_icon.py  materialai_desktop.py  version_info.txt
schemas/: README.md  case_package.schema.json
src/pylabfea/: __init__.py  basic.py  data.py  material.py  model.py
tests/: test_abaqus_bridge.py  test_abaqus_diagnostics.py  test_abaqus_mcp_client.py  test_batch_simulation.py  test_case_based_workflow.py  test_case_cli.py  test_case_intelligence.py  test_case_library.py  test_case_package.py  test_closed_loop_report.py  test_composite_benchmarks.py  test_composite_dataset.py  test_composite_workflow.py  test_data_import_validation.py  test_dataset_export.py  test_deepseek_audit_fixes.py  test_desktop_launcher.py  test_experimental_baselines.py  test_experimental_datasets.py  test_llm_adapter.py  test_llm_config_wizard.py  test_ml.py  test_odb_postprocess.py  test_packaging_compatibility.py  test_pipeline_barlat.py  test_plate_hole_acceptance.py  test_plate_hole_batch.py  test_product_closed_loop.py  test_round2_core_fixes.py  test_run_metal_closed_loop.py  test_rve_visualization.py  test_streamlit_app_compile.py  test_surrogate_model.py  test_task_schema_plan.py  test_windows_packaging_script.py
tools/: generate_api_inventory.py  release_audit.py
workspace.example/: README.md
